# opencode-mcps

./: .gitignore  README.md  opencode.json
docs/: 00_COMPLETE_SUITE_SUMMARY.md  00_PDF_Generation_Instructions.md  00_README_START_HERE.md  00_SESSION_SUMMARY.md  00_md-to-pdf-config.json  01_OpenCode_Installation_Guide.md  02_Serena_Code_Intelligence_Guide.md  02_Serena_Guide_Summary.md  03_Serena_vs_MCP_Summary.md  03_Understanding_Serena_vs_MCP.md  04_GitHub_MCP_Installation_Guide.md  04_GitHub_MCP_Summary.md  05_Atlassian_MCP_Installation_Guide.md  05_Atlassian_MCP_Summary.md  06_Azure_DevOps_TFS_MCP_Guide.md  06_Azure_DevOps_TFS_MCP_Summary.md  SQL_Server_MCP_Installation_Complete.md  SQL_Server_MCP_QuickRef.md
docs/sql-server-mcp/: generate_pdf.ps1  generate_pdf_simple.ps1  install.ps1
docs/sql-server-mcp/docs/: COMPLETE_GUIDE.md  PDF_GENERATION_GUIDE.md
docs/sql-server-mcp/src/: connection.py  server.py
docs/sql-server-mcp/src/sql_server_mcp.egg-info/: top_level.txt
docs/sql-server-mcp/src/tools/: __init__.py  table_tools.py
mcp-servers/kafdrop/: kafdrop_mcp.py
mcp-servers/kafdrop-bulk-search-mcp/: .env.example  index.js  package-lock.json  package.json
mcp-servers/sql-server-mcp/: PROJECT_SUMMARY.md  README.md  pyproject.toml
mcp-servers/sql-server-mcp/docs/: COMPLETE_GUIDE.html
mcp-servers/sql-server-mcp/src/: __init__.py
mcp-servers/sql-server-mcp/src/sql_server_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-servers/sql-server-mcp/src/tools/: instance_tools.py  job_tools.py
mcp-servers/sql-server-mcp/src/utils/: __init__.py
