[project]
name = "sql-server-mcp"
version = "1.0.0"
description = "MCP Server for SQL Server Management with Windows Authentication"
authors = [{name = "Your Team"}]
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.9.0",
    "pyodbc>=5.0.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
